<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.vmutafov</groupId>
    <artifactId>graalts</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.graalvm.truffle</groupId>
                                <artifactId>truffle-dsl-processor</artifactId>
                                <version>23.1.0</version>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>--add-exports</arg>
                            <arg>org.graalvm.js/com.oracle.truffle.js.runtime=com.vmutafov.graalts</arg>
                            <arg>--add-exports</arg>
                            <arg>org.graalvm.js/com.oracle.truffle.js.runtime.objects=com.vmutafov.graalts</arg>
                            <arg>--add-exports</arg>
                            <arg>org.graalvm.js/com.oracle.truffle.js.lang=com.vmutafov.graalts</arg>
                            <arg>--add-exports</arg>
                            <arg>org.graalvm.js/com.oracle.js.parser.ir=com.vmutafov.graalts</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <finalName>graalts</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <enableAssertions>false</enableAssertions>
                    <argLine>
                        --add-opens org.graalvm.js/com.oracle.truffle.js.runtime=com.vmutafov.graalts
                        --add-exports org.graalvm.js/com.oracle.truffle.js.runtime.objects=com.vmutafov.graalts
                        --add-exports org.graalvm.js/com.oracle.truffle.js.lang=com.vmutafov.graalts
                        --add-exports org.graalvm.js/com.oracle.js.parser.ir=com.vmutafov.graalts
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>download-ts-compiler</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <get src="https://www.unpkg.com/typescript@5.3.2/lib/typescript.js"
                                     dest="${project.basedir}/src/main/resources/typescript.js"
                                     verbose="true"
                                     usetimestamp="true"/>
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js-language</artifactId>
            <version>23.1.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
